# evaluation-service

./: .env.example  .gitignore  README.md  alembic.ini  main.py  pyproject.toml  requirements.txt
app/: config.py  exceptions.py  main.py
app/api/v1/: evaluate.py
app/db/: README.md  __main__.py  connection.py  eval_log_repo.py  evaluation_result_repo.py  init_db.py  llm_call_log_repo.py  llm_metadata_repo.py  models.py
app/evaluators/: README.md  README_CN.md  __init__.py  base.py  criteria.py  llm_judge_evaluator.py  registry.py
app/evaluators/llm_judge/: FactualCorrectness.py  Faithfulness.py  README.md  __init__.py  registry.py
app/evaluators/metrics/: FactualCorrectness.py  Faithfulness.py  README.md  __init__.py  registry.py
app/evaluators/performance/: __init__.py  registry.py
app/models/: request.py  response.py
app/tasks/: persist.py
app/utils/: __init__.py  config.py  constants.py  errors.py  llm_tracker.py  llm_utils.py  logger.py
docs/: API_Documentation.md  GETTING_STARTED.md  evaluation_layer_spec.docx  metrics-architecture-design.md  review_architecture.md  review_code_quality.md  review_extensibility.md  review_functionality.md  review_summary.md  task.md
docs/architecture/: sdd.md
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  0002_add_metric_name.py  0003_add_task_id.py  0004_rename_pk_columns.py
resource/prompt/: prompt.yaml
tests/: conftest.py  load_test.py
tests/integration/: test_evaluate_api.py
tests/unit/: test_llm_judge.py  test_registry.py
